--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -90,8 +90,8 @@
         .italic= link_to "Current Syllabus", current_course.syllabus_url
 
     .form-item
-      = f.label :media_file
-      = f.file_field :media_file
+      = f.label :media
+      = f.file_field :media
       = f.input :media_credit
       = f.input :media_caption
 
