--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -141,15 +141,8 @@
   %section
     %h4 Timeline
 
+    = render partial: "layouts/thumbnail_image_form_item", locals: { f: f, model: @assignment }
     = render partial: "layouts/media_image_form_item", locals: { f: f, model: @assignment }
-
-    .form-item
-      = f.label :thumbnail
-      = f.file_field :thumbnail
-      - if @assignment.thumbnail.present?
-        %img{:src => @assignment.thumbnail, :alt => "Thumbnail Assignment Image", :style => "height: 25px; width: 25px;" }
-        = f.check_box :remove_thumbnail
-        Remove Thumbnail
 
   %section
     %h4 Unlocks
