predictor responsive design with sidebar

--- a/app/views/students/predictor.html.haml
+++ b/app/views/students/predictor.html.haml
@@ -1,2 +1,1 @@
-#predictor-main-content{'ng-app' => 'gradecraft', 'ng-controller' => 'PredictorCtrl', 'ng-include' => true, 'src' => "'ng_predictor_main.html'"}
-
+#predictor-main-content{class: ('with-sidebar' if ! @fullpage), 'ng-app' => 'gradecraft', 'ng-controller' => 'PredictorCtrl', 'ng-include' => true, 'src' => "'ng_predictor_main.html'"}
