--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -477,7 +477,7 @@ article.predictor-article
 // medium
 @media (min-width: $media-small-max) and (max-width: $media-medium-max)
   article.predictor-article
-    width: 32%
+    width: 48%
   .predictor-section-title-predicted-points
     clear: both
     float: none
@@ -495,6 +495,9 @@ article.predictor-article
 @media (min-width: $media-medium-max) and (max-width: $media-large-max)
   article.predictor-article
     width: 19%
+  #predictor-main-content.with-sidebar
+    article.predictor-article
+      width: 32%
   #predictor-graphic
     width: 90%
     margin: 10px 0 0 5%
@@ -503,6 +506,9 @@ article.predictor-article
 @media (min-width: $media-large-max)
   article.predictor-article
     width: 16%
+  #predictor-main-content.with-sidebar
+    article.predictor-article
+      width: 19%
   #predictor-graphic
     width: 90%
     margin: 10px 0 0 5%
