--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -22,50 +22,56 @@
             %th{:scope => "col"} Description
             %th{:scope => "col"}
               %span
-                .icon
-                  .icon-tooltip
-                    Visible to Students
+                %a
                   %i.fa.fa-eye.fa-fw
+                .display_on_hover.hover-style
+                  Visible to Students
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Required
+              %a
                 !
+              .display_on_hover.hover-style
+                Required
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Accepts Submissions
+              %a
                 %i.fa.fa-paperclip.fa-fw
+              .display_on_hover.hover-style
+                Accepts Submissions
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Shown in Timeline
+              %a
                 %i.fa.fa-calendar.fa-fw
+              .display_on_hover.hover-style
+                Shown in Timeline
+                
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Shown in Predictor
+              %a
                 %i.fa.fa-sliders.fa-fw
+              .display_on_hover.hover-style
+                Shown in Predictor
+                
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Shown in Due This Week
+              %a
                 %i.fa.fa-list.fa-fw
+              .display_on_hover.hover-style
+                Shown in Due This Week
+                
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Logged By Students
+              %a
                 %i.fa.fa-pencil.fa-fw
+              .display_on_hover.hover-style
+                Logged By Students
+                
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Release Required
+              %a
                 %i.fa.fa-unlock-alt.fa-fw
+              .display_on_hover.hover-style
+                Release Required
+                
             %th{:scope => "col"}
-              .icon
-                .icon-tooltip
-                  Notify Students on Release
+              %a
                 %i.fa.fa-envelope.fa-fw
+              .display_on_hover.hover-style
+                Notify Students on Release
+                
             %th{:scope => "col"} Grade Form Preview
             %th{:scope => "col"} Points
 
@@ -79,58 +85,66 @@
               %td= raw assignment.description
               %td
                 - if assignment.visible?
-                  .icon
-                    .icon-tooltip
-                      Visible to Students
+                  %a
                     %i.fa.fa-eye
+                  .display_on_hover.hover-style
+                    Visible to Students
+                    
               %td
                 - if assignment.required?
-                  .icon
-                    .icon-tooltip
-                      Required
+                  %a
+                    Required
+                  .display_on_hover.hover-style
                     !
               %td
                 - if assignment.accepts_submissions?
-                  .icon
-                    .icon-tooltip
-                      Accepts Submissions
+                  %a
                     %i.fa.fa-paperclip
+                  .display_on_hover.hover-style
+                    Accepts Submissions
+                    
               %td
                 - if assignment.include_in_timeline?
-                  .icon
-                    .icon-tooltip
-                      Shown in Timeline
+                  %a
                     %i.fa.fa-calendar
+                  .display_on_hover.hover-style
+                    Shown in Timeline
+                    
               %td
                 - if assignment.include_in_predictor?
-                  .icon
-                    .icon-tooltip
-                      Shown in Predictor
+                  %a
                     %i.fa.fa-sliders
+                  .display_on_hover.hover-style
+                    Shown in Predictor
+                    
               %td
                 - if assignment.assignment_type.include_in_to_do?
-                  .icon
-                    .icon-tooltip
-                      Shown in Due This Week
+                  %a
                     %i.fa.fa-list.fa-fw
+                  .display_on_hover.hover-style
+                    Shown in Due This Week
+                    
               %td
                 - if assignment.student_logged?
-                  .icon
-                    .icon-tooltip
-                      Logged By Students
+                  %a
                     %i.fa.fa-pencil.fa-fw
+                  .display_on_hover.hover-style
+                    Logged By Students
+                    
               %td
                 - if assignment.release_necessary?
-                  .icon
-                    .icon-tooltip
-                      Release Required
+                  %a
                     %i.fa.fa-unlock-alt.fa-fw
+                  .display_on_hover.hover-style
+                    Release Required
+                    
               %td
                 - if assignment.notify_released?
-                  .icon
-                    .icon-tooltip
-                      Notify Students on Release
+                  %a
                     %i.fa.fa-envelope.fa-fw
+                  .display_on_hover.hover-style
+                    Notify Students on Release
+                    
 
               %td
                 - if assignment.grade_select?
