--- a/app/views/info/awarded_badges.html.haml
+++ b/app/views/info/awarded_badges.html.haml
@@ -29,10 +29,10 @@
           %td= link_to student.last_name, student_path(student)
           %td
             - student.earned_badges_for_course(current_course).each do |eb|
-              .icon
-                .icon-tooltip
-                  = eb.name
+              %a 
                 %img{:src => eb.try(:icon), :alt => eb.try(:name), :width => "20", :title => eb.name}
+              .display_on_hover.hover-style
+                = eb.name
           %td{:style => "display: none"}= points student.earned_badges_for_course(current_course).count
           - if current_course.valuable_badges?
             %td= points student.earned_badge_score_for_course(current_course)
