Finish the dropdown menu

--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -8,7 +8,7 @@
   %li.has-form{:role => "search"}
     %label.sr-only{:for => "search-input"}
       Search Courses
-    %input.courses-search-query.search-input{ data: { autocompleteUrl: autocomplete_student_name_students_path }, type: "text", placeholder: "Search Courses", label: false }
+    %input.courses-search-query.search-input{ data: { autocompleteUrl: courses_path }, type: "text", placeholder: "Search Courses", label: false }
     %a.alert.button{ :href => "#" } Go
 
 %h5 Overview
