--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -41,7 +41,6 @@ select:hover
   z-index: 1000
   display: none
   float: left
-  width: 175px
   padding: 5px
   background-color: lighten($primary-color-1, 70%)
   margin: 2px 0 0
@@ -64,6 +63,9 @@ select:hover
   li:hover, li.active a, li.active
     background-color: $primary-color-1
     color: #fff !important
+
+  &.course-result
+    top: 5.1rem;
 
 ul.accepts_submission_types
   list-style-type: none
@@ -206,7 +208,7 @@ ul.accepts_submission_types
     margin: 0
     background-color: $color-grey-4
 
-.grade-scheme-elements 
+.grade-scheme-elements
   .form_label
     margin-right: .5rem
   input
