--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %title
       = "#{@title.titleize} - " if @title
       = current_course.try(:name) || 'GradeCraft'
-    = stylesheet_link_tag "application", :media => "all", media: "all"
+    = stylesheet_link_tag "application", :media => "all"
     = csrf_meta_tags
     = yield(:head)
 
