--- a/app/views/students/syllabus/_challenges.haml
+++ b/app/views/students/syllabus/_challenges.haml
@@ -29,10 +29,11 @@
               .right
                 %ul
                   - if current_user_is_staff?
-                    %li
-                      %a{:href => edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team), :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
-                        Edit Grade
-                  - else
-                    %li
-                      %a{:href => new_challenge_challenge_grade_path(:challenge_id => challenge.id, :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
-                        Grade
+                    - if challenge.challenge_grade_for_team(current_student.team).present?
+                      %li
+                        %a{:href => edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team), :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
+                          Edit Grade
+                    - else
+                      %li
+                        %a{:href => new_challenge_challenge_grade_path(:challenge_id => challenge.id, :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
+                          Grade
