--- a/app/views/info/choices.html.haml
+++ b/app/views/info/choices.html.haml
@@ -19,7 +19,7 @@
         %th Last Name
         - @assignment_types.each do |assignment_type|
           - if assignment_type.student_weightable?
-            %th
+            %th= assignment_type.name
         %th
         %th
     %tbody
