--- a/app/views/analytics/per_assign.html.haml
+++ b/app/views/analytics/per_assign.html.haml
@@ -49,6 +49,6 @@
                   = assignment.submissions.count
               %th= assignment.grade_count
               %th
-                %ul.right
+                %ul.button-bar.right
                   %li= link_to raw("<i class='fa fa-check fa-fw'></i> Quick Grade"), mass_grade_assignment_path(assignment), :class => "button"
                   %li= link_to raw("<i class='fa fa-cloud-download fa-fw'></i> Download Grades"), export_grades_assignment_path(assignment, format: 'csv'), :class => "button"
