--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -4,6 +4,7 @@ table
   font-size: .9rem
   text-align: left
   width: 100%
+  background-color: #FFF
 
   tr:nth-child(even)
     background-color: $color-grey-4 !important
@@ -85,5 +86,16 @@ i.missing_grade
   font-weight: bold
 
 @media (max-width: 867px)
-  th.draggable, td.draggable
-    display: none
+  table
+    th.draggable, td.draggable
+      display: none
+
+@media (max-width: 1000px)
+  table
+    th, td
+      padding: .25rem
+      font-size: .7rem
+
+  tbody ul.button-bar li a.button
+    padding: 2px 5px
+    white-space: nowrap
