--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -54,7 +54,7 @@
           %td= badge.awarded_count
           %td
             .right
-              %ul
+              %ul.button-bar
                 %li= link_to raw("<i class='fa fa-check fa-fw'></i> Quick Award"), mass_award_badge_path(badge), :class => "button"
                 %li= link_to raw("<i class='fa fa-star fa-fw'></i> Award"), new_badge_earned_badge_path(badge), :class => "button"
                 %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_badge_path(badge), :class => 'button'
