--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -110,7 +110,7 @@
             %td
               .right
                 - @badge.earned_badges.where(:student_id => student.id).each do |badge|
-                  %ul
+                  %ul.button-bar
                     %li= link_to raw("<i class='fa fa-star fa-fw'></i> Awarded #{badge.created_at.strftime("%b %d")}"), badge_earned_badge_path(@badge, badge.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_badge_earned_badge_path(@badge, badge.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), badge_earned_badge_path(@badge, badge), :class => "button", :method => :delete, :data => { confirm: "Are you sure you want to delete this award?" }
