--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -41,7 +41,7 @@
           - if @challenge.release_necessary?
             %th Status
           - if current_user_is_staff?
-            %th{:style => "min-width: 220px"}
+            %th
           - if @challenge.release_necessary?
             %th.center{"data-dynatable-no-sort" => "true" }
               %button.button.select-all= "Check All"
@@ -67,25 +67,15 @@
             - if current_user_is_staff?
               %td
                 .right
-                  %ul
-                    - if challenge_grade
-                      %li
-                        %a{:href => challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button'}
-                          See Grade
-                          %span.sr-only
-                            = "for #{team.name}"
-                      %li
-                        %a{:href => edit_challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button'}
-                          Edit Grade
-                          %span.sr-only
-                            = "for #{team.name}"
-                      %li
-                        %a{:href => challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button', :data => { confirm: 'Are you sure?', method: :delete }}
-                          Delete Grade
-                    - else
-                      %li
-                        %a{:href => new_challenge_challenge_grade_path(:challenge_id => @challenge.id, :team_id => team.id), :class => 'button'}
-                          Grade
+                  - if challenge_grade
+                    %ul.button-bar
+                      %li= link_to raw("<i class='fa fa-eye fa-fw'></i><span class='hide-for-small'>See Grade</span>"), challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button'
+                      %li= link_to raw("<i class='fa fa-edit fa-fw'></i><span class='hide-for-small'>Edit Grade</span>"), edit_challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button'
+                      %li= link_to raw("<i class='fa fa-trash fa-fw'></i><span class='hide-for-small'>Delete Grade</span>"), challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button', :data => { confirm: 'Are you sure?', method: :delete }
+                  - else
+                    %ul.button-bar
+                      %li= link_to raw("<i class='fa fa-check fa-fw'></i> <span class='hide-for-small'>Grade</span>"), new_challenge_challenge_grade_path(:challenge_id => @challenge.id, :team_id => team.id), :class => 'button'
+
             - if @challenge.release_necessary?
               %td
                 - if challenge_grade
