--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -26,26 +26,25 @@
           %span.sr-only Actions
     %tbody
       - @courses.each do |course|
-        - cache ["v1", course] do
-          %tr
-            %td= link_to course.name, course
-            %td= course.courseno
-            %td= course.year
-            %td= course.semester
-            %td
-            %td= points course.total_points
-            %td
-              - if course == current_course
-                = link_to_unless_current "Export Grades for Research", research_gradebook_path, :class=>"data-clearing"
-            %td
-              .right
-                %ul
-                  %li
-                    = link_to edit_course_path(course), :class => 'button' do
-                      Edit
-                  %li
-                    = link_to course, :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete do
-                      Delete
-                  %li
-                    = link_to copy_courses_path(:id => course.id), :class => 'button', :method => :copy do
-                      Copy
+        %tr
+          %td= link_to course.name, course
+          %td= course.courseno
+          %td= course.year
+          %td= course.semester
+          %td
+          %td= points course.total_points
+          %td
+            - if course == current_course
+              = link_to_unless_current "Export Grades for Research", research_gradebook_path, :class=>"data-clearing"
+          %td
+            .right
+              %ul
+                %li.button-bar
+                  = link_to edit_course_path(course), :class => 'button' do
+                    Edit
+                %li
+                  = link_to course, :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete do
+                    Delete
+                %li
+                  = link_to copy_courses_path(:id => course.id), :class => 'button', :method => :copy do
+                    Copy
