--- a/app/views/grades/standard_edit/_badges_available.html.haml
+++ b/app/views/grades/standard_edit/_badges_available.html.haml
@@ -14,5 +14,5 @@
       .ribbon-stitches-bottom
     .ribbon-ends
     .gold-stars
-      %img.star(src="/assets/golden-star.png")
+      %img.star(src="/images/golden-star.png")
       .badges-earned.blue {{badge.earnedBadgesForGrade.length + badge.otherEarnedBadges.length}}
