--- a/app/views/grades/standard_edit/_badges_awarded.html.haml
+++ b/app/views/grades/standard_edit/_badges_awarded.html.haml
@@ -15,5 +15,5 @@
       .ribbon-stitches-bottom
     .ribbon-ends
     .gold-stars
-      %img.star(src="/assets/golden-star.png")
+      %img.star(src="/images/golden-star.png")
       .badges-earned.blue {{badge.totalEarnedBadges()}}
