--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -297,6 +297,15 @@ article.predictor-article.status-graded
   .predictor-article-icons
     background-color: $color-blue-3
 
+article.predictor-article.status-graded.status-no-points
+  background-color: $color-grey-4
+  border: 1px solid $color-grey-3
+  border-bottom: .25rem solid $color-grey-3
+  .predictor-article-title
+    background-color: $color-grey-2
+  .predictor-article-icons
+    background-color: $color-grey-3
+
 .article-graded .grade, .pass-fail-prediction, .badge-complete .value
   text-align: center
   font-size: $predictor-font-size-1
