remove predictions from faculty predictor view

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -425,7 +425,7 @@ article.predictor-article
   margin-top: 0
   margin-bottom: 0
   border-top: none
-  border-bottom: none
+  border-bottom: none !important
 
 /* MEDIA QUERIES */
 
