show all weights as equation

--- a/app/assets/javascripts/angular/templates/ng_predictor_assignment_types.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_assignment_types.html.haml
@@ -12,6 +12,7 @@
 
           .predictor-section-title-weights{{'ng-if'=>'assignmentType.student_weightable'}}
             .predictor-assignment-type-weights{{'target'=>'assignmentType'}}
+            .predictor-title-right-span.left-padded =
             .predictor-weighted-point-total
               {{assignmentTypePointTotal(assignmentType,true) | number}}
 
