add loading icon to predictor

--- a/app/assets/javascripts/angular/templates/ng_predictor_main.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_main.html.haml
@@ -1,3 +1,9 @@
+#predictor-loading-message{{'ng-if'=>'loading'}}
+
+  %h2
+    %i.fa.fa-spinner.fa-spin.fa-fw
+    Loading Predictor...
+
 #grade-levels{'ng-include' => true, 'src' => "'ng_predictor_graphic.html'"}
 
 #predictor-main-header
