--- a/app/views/notification_mailer/updated_submission.html.haml
+++ b/app/views/notification_mailer/updated_submission.html.haml
@@ -163,11 +163,11 @@ width: 100%;
 <tr>
 <td>
 <p align="center">
-<a href="http://facebook.com/gradecraft" alt="GradeCraft on Facebook"><img src="http://localhost:5000/images/facebook500.png" width="40"/></a>
+<a href="http://facebook.com/gradecraft" alt="GradeCraft on Facebook"><img src="https://gradecraft.com/images/facebook500.png" width="40"/></a>
 
-<a href="http://twitter.com/gradecraft" alt="GradeCraft on Twitter"><img src="http://localhost:5000/images/twitter.png" width="40"/></a>
+<a href="http://twitter.com/gradecraft" alt="GradeCraft on Twitter"><img src="https://gradecraft.com/images/twitter.png" width="40"/></a>
 
-<a href="http://www.youtube.com/playlist?list=PL8pE6w-B6iSUjSjK5cR0yaC1xxvQmLe5m" alt="GradeCraft on YouTube"><img src="http://localhost:5000/images/youtube.png" width="40"/></a>
+<a href="http://www.youtube.com/playlist?list=PL8pE6w-B6iSUjSjK5cR0yaC1xxvQmLe5m" alt="GradeCraft on YouTube"><img src="https://gradecraft.com/images/youtube.png" width="40"/></a>
 </p>
 
 <p style="text-transform:uppercase; font-size: 10px; text-align: center;">
