--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -2,6 +2,9 @@
 
 %h3.pagetitle= @title
 
+- if current_user_is_staff?
+  = render "submissions/buttons"
+
 .pageContent
   = render 'layouts/alerts'
   
